# ai-eval-scope

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  cli.py  docker-compose.yml  pyproject.toml  sdk.py
evaluator/: CLAUDE.md  README.md  cli.py  pyproject.toml
evaluator/agent_eval/: __init__.py
evaluator/agent_eval/agent/: __init__.py  eval_tools.py  execution_agent.py
evaluator/agent_eval/assets/datasets/: dataset_index.yaml
evaluator/agent_eval/assets/knowledge/: biology.yaml  chemistry.yaml  chinese.yaml  geography.yaml  history.yaml  math.yaml  morality.yaml  physics.yaml
evaluator/agent_eval/assets/prompts/: chronological_order.yaml  fact_verdict.yaml  info_accuracy.yaml  knowledge_extract.yaml  knowledge_extract_constants.yaml  request_fulfillment.yaml
evaluator/agent_eval/assets/rules/: default_rule_set.yaml
evaluator/agent_eval/cli/: __init__.py  _common.py  dataset.py  knowledge.py  main.py  rule_set.py
evaluator/agent_eval/config/: __init__.py  evaluation.py  execution.py  llm.py  loader.py  observability.py  paths.py  reporting.py
evaluator/agent_eval/core/: __init__.py  exceptions.py  logging.py  types.py
evaluator/agent_eval/datasets/: __init__.py  downloader.py  manager.py  registry.py
evaluator/agent_eval/evaluation/: __init__.py  aggregator.py  base.py  engine.py  metrics.py  models.py  registry.py  text_utils.py
evaluator/agent_eval/execution/: __init__.py  models.py
evaluator/agent_eval/knowledge/: __init__.py  auditor.py  base.py  exceptions.py  manager.py  merger.py  models.py  pipeline.py  registry.py
evaluator/agent_eval/knowledge_pipeline/: __init__.py  base.py  merger.py  pipeline.py  registry.py
evaluator/agent_eval/llm/: __init__.py  models.py
evaluator/agent_eval/observability/: config.py  events.py  queue.py  sink.py
evaluator/agent_eval/orchestrator/: orchestrator.py
evaluator/agent_eval/rules/: __init__.py  manager.py  models.py
evaluator/agent_eval/sdk/: rules.py
evaluator/agent_eval/storage/: __init__.py  builder.py  package.py  workspace.py
evaluator/agent_eval/web/: __init__.py  indexer.py
evaluator/assets/knowledge/: biology.yaml
evaluator/assets/prompts/: logical_consistency.yaml
evaluator/tests/: __init__.py  conftest.py
evaluator/tests/config/: test_evaluation_config.py  test_llm_config.py  test_reporting_config.py
evaluator/tests/e2e/: __init__.py
evaluator/tests/evaluation/: test_vision_renderer.py
evaluator/tests/evaluators/: __init__.py  test_cascade_metrics.py  test_format_and_commonsense.py  test_format_evaluators.py  test_llm_judge_evaluators.py  test_quality_evaluators.py  test_vision_evaluator.py
evaluator/tests/integration/: test_observability_e2e.py
evaluator/tests/llm/: __init__.py  test_anthropic_client.py  test_judge_orchestrator_vision.py  test_models.py  test_openai_compat_client.py  test_pool.py  test_template_manager.py  test_tracing.py
evaluator/tests/orchestrator/: test_eval_flow.py
evaluator/tests/reporting/: test_report_generator.py
evaluator/tests/unit/: test_agent_module.py  test_aggregator.py  test_cli_dataset.py  test_cli_index.py  test_cli_llm_check.py  test_cli_pack.py  test_config_loader.py  test_core_types.py  test_data_models.py  test_knowledge_auditor.py  test_observability_config_client_queue.py  test_observability_events.py  test_package.py  test_package_builder.py  test_plugin_discovery.py  test_rule_manager.py  test_rule_sdk.py  test_web_indexer.py  test_workspace.py
(+1433 files in other folders)
