[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-eval"
version = "0.1.0"
description = "Agent 能力评估系统 — 基于 Agent-Driven 架构的评测框架"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Agent Eval Team"},
]
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "structlog>=24.0",
    "httpx>=0.27",
    "diskcache>=5.6",
    "markdown>=3.5",
    "beautifulsoup4>=4.12",
    "html5lib>=1.1",
    "jsonschema>=4.21",
    "rich>=13.0",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]
llm = [
    "openai>=1.30",
    "anthropic>=0.30",
]

[project.scripts]
agent-eval = "cli:app"

[tool.hatch.build.targets.wheel]
packages = ["agent_eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: 单元测试",
    "integration: 集成测试",
    "evaluator: 评估器测试",
    "e2e: 端到端测试",
    "golden: 黄金样本回归测试",
]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
